fix: button animation mobile layout

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -99,18 +99,21 @@ body {
   font-family: inherit;
   font-size: 1.25rem;
   border: none;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   cursor: pointer;
   transition: 0.25s ease 0.15s;
 }
 
-button:hover,
-button:focus,
+.button:hover,
 .button--active:hover {
   box-shadow: 0 0.5em 0.5em -0.4em var(--gold);
   transform: translateY(-0.25em);
   transition: 0.25s ease 0.15s;
   color: var(--white);
+}
+
+button:focus {
+  transform: translateY(0);
+  box-shadow: 0 0 0 0;
 }
 
 .button--gold {
@@ -119,7 +122,8 @@ button:focus,
   border: 1px solid var(--gold);
 }
 
-.button--gold:hover {
+.button--gold:hover,
+.button--gold:focus {
   color: var(--white);
 }
 
@@ -137,6 +141,7 @@ button:focus,
   transform: translateY(0);
   box-shadow: 0 0 0 0;
   background: var(--gold);
+  color: var(--white);
 }
 
 .button--active {
@@ -399,7 +404,8 @@ button:focus,
   transition: 0.3s;
 }
 
-.video__play-btn:hover {
+.video__play-btn:hover,
+.video__play-btn:focus {
   filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
     contrast(87%);
   transform: translateY(0);
@@ -660,6 +666,19 @@ button:focus,
     margin: 0.3em 0 2.7rem;
   }
 
+  .button {
+    transition: 0.25s ease;
+  }
+
+  .button:hover,
+  .button:focus,
+  .button--active:focus,
+  .button--active:hover {
+    transition: 0.25s;
+    transform: translateY(0);
+    box-shadow: 0 0 0 0;
+  }
+
   /* heder, nav and hero */
   .lang-switcher {
     padding: 0 80px 0 0;
@@ -732,6 +751,16 @@ button:focus,
     right: 4rem;
     width: 3rem;
     aspect-ratio: 1;
+  }
+
+  .mobile-nav-toggle:hover {
+    cursor: pointer;
+  }
+
+  .mobile-nav-toggle:hover,
+  .mobile-nav-toggle:focus {
+    transform: translateY(0);
+    box-shadow: 0 0 0 0;
   }
 
   /* portfolio */
